--- a/app/view/index.html
+++ b/app/view/index.html
@@ -39,7 +39,11 @@
                         </ul>
                     </li>
                     <li><a href="#">Edit</a></li>
-                    <li><a href="#">Help</a></li>
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Help<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">About Software</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
