--- a/app/view/index.html
+++ b/app/view/index.html
@@ -2,17 +2,7 @@
 <html>
 <head>
     <title>Knitting Web App</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="../controller/pixelate.js"></script>
-    <script src="../controller/editor.js"></script>
-    <script src="../model/client/client.js"></script>
-    <script src="../controller/com_handler.js"></script>
-
-    <script src="../lib/js/colpick.js" type="text/javascript"></script>
-    <script src="../lib/js/jquery.Jcrop.js"></script>
-    <script src="../lib/js/jquery.Jcrop.min.js"></script>
-    <script src="js/jcrop_main.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="../lib/js/jquery.min.js"></script>
 
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="../lib/css/colpick.css" type="text/css"/>
@@ -95,7 +85,7 @@
             </div>
 
             <fieldset id="row-generated">
-                <h3>Pattern Preview</h3>
+                <h3>Generated Pattern </h3>
 
                 <div>
                     <div>
@@ -106,6 +96,7 @@
                             <div class="clear"></div>
                         </div>
 
+                        <div id="control-panel">
                         <div id="controller-group-a" class="panel">
                             <div class="input-group">
                                 <div class="text-input-group">
@@ -115,9 +106,9 @@
                                 </div>
                                 <div class="text-input-group">
                                     <label>&nbsp;</label>
-                                    <button onclick="colourChange()">Add</button>
-                                    <button onclick="pixelDel()">Delete</button>
-                                    <button onclick="undo()">Reset</button>
+                                    <button onclick="colourChange()"><span class="glyphicon glyphicon-screenshot"></span>Fill</button>
+                                    <button onclick="pixelDel()"><span class="glyphicon glyphicon-trash"></span>Delete</button>
+                                    <button onclick="undo()"><span class="glyphicon glyphicon-repeat"></span>Reset</button>
                                 </div>
                             </div>
                             <!--<button onclick="checkBounds()">test</button>-->
@@ -145,7 +136,11 @@
                             <div class="input-group">
                                 <div class="text-input-group">
                                     <label>&nbsp;</label>
-                                    <input type="checkbox" onclick="checkBounds(this)">&nbsp;Show Colour Regions
+                                    <input type="checkbox" onclick="checkBounds(this)">&nbsp;Show Colour Regions[selected area]
+                                </div>
+
+                                <div class="text-input-group">
+                                    <input type="checkbox" onclick="">&nbsp;Show Colour Regions[all area]
                                 </div>
                             </div>
                         </div>
@@ -159,21 +154,19 @@
                                     <!--<div class="clear"></div>-->
                                 </div>
                                 <div class="text-input-group">
-                                    <label>&nbsp;</label>
                                     <input type="radio" name="areaTool" id="squareSelect" checked="checked"
                                            onclick="selectTool(false)">&nbsp;Square
                                     <!--<div class="clear"></div>-->
                                 </div>
                             </div>
-
                         </div>
 
                         <div class="panel">
                             <div class="input-group">
                                 <div class="text-input-group">
-                                    <label>&nbsp;</label>
-                                    <select id="port_list"></select>&nbsp;
-                                    <button onclick="refreshPorts()">Refresh Ports</button>
+                                    <label>&nbsp;Port:</label>&nbsp;
+                                    <select id="port_list" style="width:40%"><option>-select-</option></select>&nbsp;
+                                    <button onclick="refreshPorts()"><span class="glyphicon glyphicon-refresh"></span></button>
                                 </div>
                             </div>
                         </div>
@@ -181,9 +174,9 @@
                         <div class="panel">
                             <div class="input-group">
                                 <div class="text-input-group">
-                                    <label>&nbsp;</label>
-                                    <select id="machine_list"></select>&nbsp;
-                                    <button onclick="updateMachineType()">Machine Type</button>
+                                    <label>&nbsp;Machine:</label>&nbsp;
+                                    <select id="machine_list" style="width:40%"><option>-select-</option></select>&nbsp;
+                                    <button onclick="updateMachineType()"><span class="glyphicon glyphicon-refresh"></span></button>
                                 </div>
                             </div>
                         </div>
@@ -191,11 +184,12 @@
                             <div class="input-group">
                                 <div class="text-input-group">
                                     <label>&nbsp;</label>
-                                    <button onclick="loadPattern()">Configure</button>
+                                    <button onclick="loadPattern()" style="width:50%">Configure</button>
                                 </div>
                             </div>
                         </div>
                         <div class="clear"></div>
+                        </div>
                     </div>
                 </div>
             </fieldset>
@@ -211,7 +205,7 @@
                     <canvas id="pointerCanvas"></canvas>
                 </div>
                 <div id="tool-box">
-                    <button onclick="updateHead()">Load</button>
+                    <button onclick="configureKnit()">Start Knitting</button>
                 </div>
                 <div id="stitching-progress-panel" style="float: right">
                     <label>Column:</label>
@@ -273,6 +267,17 @@
     }
 
 </script>
+
+<script src="../controller/pixelate.js"></script>
+<script src="../controller/editor.js"></script>
+<script src="../model/client/client.js"></script>
+<script src="../controller/com_handler.js"></script>
+
+<script src="../lib/js/colpick.js" type="text/javascript"></script>
+<script src="../lib/js/jquery.Jcrop.js"></script>
+<script src="../lib/js/jquery.Jcrop.min.js"></script>
+<script src="js/jcrop_main.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 <script type="text/javascript" src="../controller/colorschema.js"></script>
 <script type="text/javascript" src="../controller/drawingtool.js"></script>
