added german translation property

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -37,6 +37,7 @@
 					<li class="dropdown"><a class="dropdown-toggle" data-l10n-id="menu_translate" data-toggle="dropdown" href="#">Translate<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#" data-l10n-id="menu_translate_english">English</a></li>
+							<li><a href="#" data-l10n-id="menu_translate_german">German</a></li>
 							<li><a href="#" data-l10n-id="menu_translate_sinhala">Sinhala</a></li>
 							<li><a href="#" data-l10n-id="menu_translate_tamil">Tamil</a></li>
                         </ul>
