--- a/app/view/index.html
+++ b/app/view/index.html
@@ -22,19 +22,19 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Knitting Web Application</a>
+                <a class="navbar-brand" href="#" data-l10n-id="heading_knittingwebapplication">Knitting Web Application</a>
             </div>
             <div>
                 <ul class="nav navbar-nav">
-                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">File<span class="caret"></span></a>
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" data-l10n-id="menu_file">File<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Open Project</a></li>
-                            <li><a href="#">Save Pattern</a></li>
-                            <li><a href="#">Import Pattern</a></li>
+                            <li><a href="#" data-l10n-id="menu_file_openproject">Open Project</a></li>
+                            <li><a href="#" data-l10n-id="menu_file_savepattern">Save Pattern</a></li>
+                            <li><a href="#" data-l10n-id="menu_file_importpattern">Import Pattern</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Edit</a></li>
-					<li class="dropdown"><a class="dropdown-toggle" data-l10n-id="menu_translate" data-toggle="dropdown" href="#">Translate<span class="caret"></span></a>
+                    <li><a href="#" data-l10n-id="menu_edit">Edit</a></li>
+					<li class="dropdown"><a class="dropdown-toggle" data-l10n-id="menu_translate" data-toggle="dropdown" href="#" data-l10n-id="menu_translate">Translate<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#" data-l10n-id="menu_translate_english">English</a></li>
 							<li><a href="#" data-l10n-id="menu_translate_german">German</a></li>
@@ -42,9 +42,9 @@
 							<li><a href="#" data-l10n-id="menu_translate_tamil">Tamil</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Help<span class="caret"></span></a>
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" data-l10n-id="menu_help">Help<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">About Software</a></li>
+                            <li><a href="#" data-l10n-id="menu_help_aboutsoftware">About Software</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -54,7 +54,7 @@
     <div id="wrapper" class="page">
         <div id="content">
             <fieldset id="load-file">
-                <p id="status">Load a Pattern</p>
+                <p id="status" data-l10n-id="heading_loadapattern">Load a Pattern</p>
                 <input id="file" type="file" onchange="readURL(this);"/>
             </fieldset>
             <div id="row-preview" class="img-outer">
@@ -63,7 +63,7 @@
                     <img id="test" src="#" style="display: none"/>
 
                     <div id="loader-controller-group">
-                        <label>
+                        <label data-l10n-id="checkbox_enablecropping">
                             <input id="cropCheck" onclick="crop()" type="checkbox">
                             &nbsp;Enable cropping
                         </label>
@@ -87,18 +87,18 @@
                 </div>
 
                 <div id="yarn-colors" class="right-to-img-loader">
-                    <button id="addBtn">Add Yarn Colour</button>
+                    <button id="addBtn" data-l10n-id="button_addyarncolour">Add Yarn Colour</button>
                     <table id="previewTable" cellspacing="0" cellpadding="0"></table>
                 </div>
 
                 <div class="clear"></div>
             </div>
             <div id="generator">
-                <button onclick="init()">Generate Pattern</button>
+                <button onclick="init()" data-l10n-id="button_generatepattern">Generate Pattern</button>
             </div>
 
             <fieldset id="row-generated">
-                <h3>Generated Pattern </h3>
+                <h3 data-l10n-id="heading_generatedpattern">Generated Pattern </h3>
 
                 <div>
                     <div>
@@ -119,9 +119,9 @@
                                 </div>
                                 <div class="text-input-group">
                                     <label>&nbsp;</label>
-                                    <button onclick="colourChange()"><span class="glyphicon glyphicon-screenshot"></span>Fill</button>
-                                    <button onclick="pixelDel()"><span class="glyphicon glyphicon-trash"></span>Delete</button>
-                                    <button onclick="undo()"><span class="glyphicon glyphicon-repeat"></span>Reset</button>
+                                    <button onclick="colourChange()" data-l10n-id="button_fill"><span class="glyphicon glyphicon-screenshot"></span>Fill</button>
+                                    <button onclick="pixelDel()" data-l10n-id="button_delete"><span class="glyphicon glyphicon-trash"></span>Delete</button>
+                                    <button onclick="undo()" data-l10n-id="button_Reset"><span class="glyphicon glyphicon-repeat"></span>Reset</button>
                                 </div>
                             </div>
                             <!--<button onclick="checkBounds()">test</button>-->
@@ -130,14 +130,14 @@
                         <div class="panel">
                             <div class="input-group">
                                 <div class="text-input-group">
-                                    <label>columns:&nbsp;</label>
+                                    <label data-l10n-id="input_columns">columns:&nbsp;</label>
                                     <input id="widthInput" class="input-params" type="text" value="100">
 
                                     <div class="clear"></div>
                                 </div>
 
                                 <div class="text-input-group">
-                                    <label>rows:&nbsp;</label>
+                                    <label data-l10n-id="input_rows">rows:&nbsp;</label>
                                     <input id="heightInput" class="input-params" type="text" value="100">
 
                                     <div class="clear"></div>
@@ -177,7 +177,7 @@
                         <div class="panel">
                             <div class="input-group">
                                 <div class="text-input-group">
-                                    <label>&nbsp;Port:</label>&nbsp;
+                                    <label data-l10n-id="input_port">&nbsp;Port:</label>&nbsp;
                                     <select id="port_list" style="width:40%"><option>-select-</option></select>&nbsp;
                                     <button onclick="refreshPorts()"><span class="glyphicon glyphicon-refresh"></span></button>
                                 </div>
@@ -187,7 +187,7 @@
                         <div class="panel">
                             <div class="input-group">
                                 <div class="text-input-group">
-                                    <label>&nbsp;Machine:</label>&nbsp;
+                                    <label data-l10n-id="input_machine">&nbsp;Machine:</label>&nbsp;
                                     <select id="machine_list" style="width:40%"><option>-select-</option></select>&nbsp;
                                     <button onclick="updateMachineType()"><span class="glyphicon glyphicon-refresh"></span></button>
                                 </div>
@@ -198,7 +198,7 @@
                             <div class="input-group">
                                 <div class="text-input-group">
                                     <label>&nbsp;</label>
-                                    <button onclick="loadPattern()" style="width:50%">Proceed Knitting</button>
+                                    <button onclick="loadPattern()" style="width:50%" data-l10n-id="button_proceed_knit">Proceed Knitting</button>
                                 </div>
                             </div>
                         </div>
@@ -211,7 +211,7 @@
 
         <fieldset id="row-generated-simulator">
             <div id="simulator" style='display:none'>
-                <h1 style='margin-top:5px;margin-left:20px'>Knitting Simulator</h1>
+                <h1 style='margin-top:5px;margin-left:20px' data-l10n-id="">Knitting Simulator</h1>
 
                 <div id="simulator-canvas-section" style="margin: 10px">
                     <div id="simulator-canvas-div">
@@ -222,14 +222,14 @@
                         <div class="panel">
                             <div class="input-group">
                                 <div class="text-input-group">
-                                    <label>Column:</label>
+                                    <label data-l10n-id="">Column:</label>
                                     <input id="column-num" class="input-params" type="text" value="0" readonly="readonly" >
 
                                     <div class="clear"></div>
                                 </div>
 
                                 <div class="text-input-group">
-                                    <label>Row:</label>
+                                    <label data-l10n-id="">Row:</label>
                                     <input id="row-num" class="input-params" type="text" value="0" readonly="readonly" >
                                     <div class="clear"></div>
                                 </div>
@@ -239,14 +239,14 @@
                         <div class="panel">
                             <div class="input-group">
                                 <div class="text-input-group">
-                                    <label>Colors:&nbsp;</label>
+                                    <label data-l10n-id="">Colors:&nbsp;</label>
                                     <input id="colour-count" class="input-params" type="text" value="2" readonly="readonly" >
 
                                     <div class="clear"></div>
                                 </div>
 
                                 <div class="text-input-group">
-                                    <label>Start Line:&nbsp;</label>
+                                    <label data-l10n-id="">Start Line:&nbsp;</label>
                                     <input id="start-line" class="input-params" type="text" value="0">
 
                                     <div class="clear"></div>
@@ -258,7 +258,7 @@
                             <div class="input-group">
                                 <div class="text-input-group">
                                     <label>&nbsp;</label>
-                                    <input type="checkbox" onclick="">&nbsp;Infinite Repeat
+                                    <input type="checkbox" onclick="" data-l10n-id="">&nbsp;Infinite Repeat
                                 </div>
                             </div>
                         </div>
@@ -266,14 +266,14 @@
                         <div class="panel">
                             <div class="input-group">
                                 <div class="text-input-group">
-                                    <label>Start Needle:&nbsp;</label>
+                                    <label data-l10n-id="">Start Needle:&nbsp;</label>
                                     <input id="start-needle" class="input-params" type="text" value="0" >
 
                                     <div class="clear"></div>
                                 </div>
 
                                 <div class="text-input-group">
-                                    <label>Stop Needle:&nbsp;</label>
+                                    <label data-l10n-id="">Stop Needle:&nbsp;</label>
                                     <input id="stop-needle" class="input-params" type="text" value="0">
 
                                     <div class="clear"></div>
@@ -285,7 +285,7 @@
                             <div class="input-group">
                                 <div class="text-input-group">
                                     <label>&nbsp;</label>
-                                    <button id="configure-btn" type="button" class="btn btn-default" onclick="configureKnit()" style="width:60%">Configure</button>
+                                    <button id="configure-btn" type="button" class="btn btn-default" onclick="configureKnit()" style="width:60%" data-l10n-id="button_configure">Configure</button>
                                 </div>
                             </div>
                         </div>
@@ -294,9 +294,9 @@
                             <div class="input-group">
                                 <div class="text-input-group">
                                     <label>&nbsp;</label>
-                                    <button id="start-btn" type="button" class="btn btn-default" disabled="disabled" onclick="startKnit()" style="width:20%">Start</button>
-                                    <button id="pause-btn" type="button" class="btn btn-default" disabled="disabled" onclick="updateHead()" style="width:20%">Pause</button>
-                                    <button id="stop-btn" type="button" class="btn btn-default" disabled="disabled" onclick="updateHead()" style="width:20%">Stop</button>
+                                    <button id="start-btn" type="button" class="btn btn-default" disabled="disabled" onclick="startKnit()" style="width:20%" data-l10n-id="">Start</button>
+                                    <button id="pause-btn" type="button" class="btn btn-default" disabled="disabled" onclick="updateHead()" style="width:20%" data-l10n-id="">Pause</button>
+                                    <button id="stop-btn" type="button" class="btn btn-default" disabled="disabled" onclick="updateHead()" style="width:20%" data-l10n-id="">Stop</button>
                                 </div>
                             </div>
                         </div>
@@ -304,7 +304,7 @@
                 </div>
 
                 <div style="margin-top: 10px">
-                    <button type="button" class="btn btn-primary" id="back-nav-btn" style='width:20%;margin-left:20px;float: left' onClick='loadContentPage()'>Back to Editor</button>
+                    <button type="button" class="btn btn-primary" id="back-nav-btn" style='width:20%;margin-left:20px;float: left' onClick='loadContentPage()' data-l10n-id="">Back to Editor</button>
                 </div>
             </div>
         </fieldset>
