added tamil language

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -44,6 +44,7 @@
                             <li><a href="#" onclick="setLang('en')" data-l10n-id="menu_translate_english">English</a></li>
                             <li><a href="#" onclick="setLang('ge')" data-l10n-id="menu_translate_german">German</a></li>
                             <li><a href="#" onclick="setLang('si')" data-l10n-id="menu_translate_sinhala">Sinhala</a></li>
+							<li><a href="#" onclick="setLang('ta')" data-l10n-id="menu_translate_tamil">Tamil</a></li>
                         </ul>
                     </li>
                     <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" data-l10n-id="menu_help">Help<span class="caret"></span></a>
@@ -397,6 +398,9 @@
 <script type="text/javascript" src="../controller/knitSimulatorHandler.js"></script>
 <script type="text/javascript" src="../controller/navbarhandler.js"></script>
 <script type="text/javascript" src="js/style.js"></script>
+
+<!-- set language javascript for global translations -->
+<script src="js/set_lang.js"></script>
 </body>
 </html>
 
